Fix CSS style causing tall images to become distorted on show pages   - Removed width: 100% on ".thumbnail img"

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,10 +3,6 @@
     padding-bottom: 30px;
 }
 
-.thumbnail img {
-    width: 100%;
-}
-
 .caption-full {
     padding: 10px 10px 0;
 }
